crates/rome_diagnostics/tests/macros/unknown_message_attr.stderr
error: unexpected token
 --> tests/macros/unknown_message_attr.rs:4:22
  |
4 | #[diagnostic(message(unknown))]
  |                      ^^^^^^^
