crates/rome_diagnostics/tests/macros/unknown_message_attr.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
#[diagnostic(message(unknown))]
struct TestDiagnostic {}

fn main() {}
